--- a/Week5/linear/makefile
+++ b/Week5/linear/makefile
@@ -1,7 +1,7 @@
 CC=g++
 
 linear: main.cpp
-	$(CC) main.cpp linear.cpp ../matrix/matrix.cpp -o main
-	./main > out.txt
+	$(CC) main.cpp linear_sol.cpp ../matrix/matrix.cpp -o main -std=c++17 -DWITHOUT_NUMPY -I/usr/include/python2.7 -lpython2.7
+	./main <linear_dataset.csv > out.txt
 clean:
 	rm main
